<resources>
    <string name="app_name">Pet4All</string>
    <!-- String Related To NavBar -->
    <string name="navbar_profile">Perfil</string>
    <string name="navbar_search">Procurar</string>
    <string name="navbar_articles">Artigos</string>
    <string name="navbar_dropdown">Dropdown</string>
    <!-- Strings related to login -->
    <string name="login_info">No account yet? Create one</string>

    <string name="title_activity_login_profile">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_login">Sign in</string>
    <string name="user_since_profile">Utilizador desde</string>
    <string name="user_last_login">Ultima vez online</string>
    <string name="date_user_creation">Data de criação</string>
    <string name="date_last_login">Ultima data de login</string>
    <string name="user_location">Localidade Placeholder , Pais Placeholder</string>
    <string name="user_about">Sobre mim…</string>
    <string name="user_name">Nome Placeholder</string>
    <string name="button_send_message">Enviar Mensagem</string>
    <string name="button_edit_profile">Editar Perfil</string>
    <string name="button_report_abuse">Reportar Abuso</string>
    <string name="textview_email_register_input">Insira o seu e-mail</string>
    <string name="textview_name_register_input">Insira o seu nome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtRegisterStatic">Registar Utilizador</string>
    <string name="txtRegister1Static">Registar Associação</string>
    <string name="txtRegisterUserDesc1">Placeholder text</string>
    <string name="txtRegisterUserDesc2">Placeholder text</string>
    <string name="txtRegisterUserDesc3">Placeholder text</string>
    <string name="txtRegisterKennelDesc1">Placeholder text</string>
    <string name="txtRegisterKennelDesc2">Placeholder text</string>
    <string name="txtRegisterKennelDesc3">Placeholder text</string>
</resources>
