<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_register_menu">

<<<<<<< HEAD
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="45dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutRegisterUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.9"
            android:background="@drawable/roundedcontainer_top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_user"
                android:drawablePadding="15dp"
                android:text="@string/txtRegisterStatic"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutRegisterUserdesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedcontainer_bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/txtRegisterUserDesc1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/txtRegisterUserDesc2" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/txtRegisterUserDesc3" />

            <Button
                android:id="@+id/buttonUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_blue_button"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:text="Criar Utilizador"
                android:onClick="btnRegister"
                android:textColor="@color/btn_text_color_blue" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutRegisterKennel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.9"
            android:layout_marginTop="25dp"
            android:background="@drawable/roundedcontainer_top1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewRegisterKennel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_association_white"
                android:drawablePadding="15dp"
                android:text="@string/txtRegister1Static"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutRegisterKenneldesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedcontainer_bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/txtRegisterKennelDesc1" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/txtRegisterKennelDesc2" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_height="wrap_content"
                android:text="@string/txtRegisterKennelDesc3" />

            <Button
                android:id="@+id/buttonKennel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_orange_button"
                android:onClick="btnRegister"
                android:text="Criar Associação"
                android:textColor="@color/btn_text_color_orange" />
        </LinearLayout>

    </LinearLayout>
    <fragment
        android:id="@id/navbarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="pt.amsi.ipleiria.pet4all.NavbarFragment">
    </fragment>
</RelativeLayout>
=======
</LinearLayout>
>>>>>>> parent of 6252a0f... #Android #Bugs
